# libi2c-user-openwrt

./: Makefile
src/: CMakeLists.txt  i2c-user.c  i2c-user.h
